fix 'addTodo' with unshift

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,3 +36,6 @@ li{
 .fa-solid{
     cursor: pointer;
 }
+h2{
+    text-align: center;
+}
